removed target tags and relinked all the src

--- a/page3/index.html
+++ b/page3/index.html
@@ -71,15 +71,15 @@
   
   <!-- Global navigation -->
        <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-  <a href="../../portfolio-page/index.html#" target="_blank" class="navbar-brand"><i class="far fa-grin-squint-tears"></i>TROLLMOTION</a>
+  <a href="../../Demo-CSUN/index.html#" class="navbar-brand"> TROLLMOTION<i class="far fa-grin-squint-tears"></i></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" href="../../page1/index.html" target="_blank">TURBOTASTIC<i class="fas fa-car-crash"></i></a>
-      <a class="nav-item nav-link" href="../../portfolio-page/page2/index.html" target="_blank">ME & THE HOMIES<i class="fas fa-users"></i></a>
-     <a class="nav-item nav-link" href="../../portfolio-page/page3/index.html#" target="_blank"></i>BANDO HUNTER<i class="fas fa-map-marked-alt"></i></a>
+      <a class="nav-item nav-link" href="../../Demo-CSUN/page1/index.html"> TURBOTASTIC<i class="fas fa-car-crash"></i></a>
+      <a class="nav-item nav-link" href="../../Demo-CSUN/page2/index.html"> ME & THE HOMIES<i class="fas fa-users"></i></a>
+     <a class="nav-item nav-link" href="../../Demo-CSUN/page3/index.html#"> BANDO HUNTER<i class="fas fa-map-marked-alt"></i></a>
     </div>
   </div>
 </nav>
@@ -161,13 +161,13 @@
                               <!-- Article -->
                               <article class="overflow-hidden rounded-lg shadow-lg">
 
-                                  <a href="../../portfolio-page/page1/index.html#">
+                                  <a href="../../Demo-CSUN//page1/index.html#">
                                       <img alt="Placeholder" class="block border-8 border-solid border-blue h-auto w-full" src="http://i50.photobucket.com/albums/f323/alchemist257/rsz_3rdpage_zpsronox0lu.jpg">
                                   </a>
 
                                   <header class="flex items-center justify-between leading-tight p-2 md:p-4">
                                       <h1 class="text-lg">
-                                          <a class="no-underline  hover:underline text-black" href="../../portfolio-page/page1/index.html#">
+                                          <a class="no-underline  hover:underline text-black" href="../../Demo-CSUN/page1/index.html#">
                                               Turbotastic
                                           </a>
                                       </h1>
@@ -188,7 +188,7 @@
                               <!-- Article -->
                               <article class="overflow-hidden rounded-lg shadow-lg">
 
-                                  <a href="../../portfolio-page/page2/index.html#">
+                                  <a href="../../Demo-CSUN/page2/index.html#">
                                       <img alt="Placeholder" class="block border-8 border-solid border-blue h-auto w-full" src="http://i50.photobucket.com/albums/f323/alchemist257/rsz_3rdpage_zpsronox0lu.jpg">
                                   </a>
 
@@ -215,13 +215,13 @@
                               <!-- Article -->
                               <article class="overflow-hidden rounded-lg shadow-lg">
 
-                                  <a href="../../portfolio-page/index.html#">
+                                  <a href="../../Demo-CSUN/index.html#">
                                       <img alt="Placeholder" class="block border-8 border-solid border-blue h-auto w-full" src="http://i50.photobucket.com/albums/f323/alchemist257/rsz_3rdpage_zpsronox0lu.jpg">
                                   </a>
 
                                   <header class="flex items-center justify-between leading-tight p-2 md:p-4">
                                       <h1 class="text-lg">
-                                          <a class="no-underline  hover:underline text-black" href="../../portfolio-page/index.html#">
+                                          <a class="no-underline  hover:underline text-black" href="../../Demo-CSUN/index.html#">
                                               TROLLMOTION
                                           </a>
                                       </h1>
