--- a/page1/index.html
+++ b/page1/index.html
@@ -71,15 +71,15 @@
   
   <!-- Global navigation -->
        <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-  <a href="../../portfolio-page/index.html#" target="_blank" class="navbar-brand"><i class="far fa-grin-squint-tears"></i>TROLLMOTION</a>
+  <a href="../../Demo-CSUN/index.html#"  class="navbar-brand"><i class="far fa-grin-squint-tears">TROLLMOTION</i></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" href="../../portfolio-page/page1/index.html" target="_blank">TURBOTASTIC<i class="fas fa-car-crash"></i></a>
-      <a class="nav-item nav-link" href="../../portfolio-page/page2/index.html" target="_blank">ME & THE HOMIES<i class="fas fa-users"></i></a>
-     <a class="nav-item nav-link" href="../../portfolio-page/page3/index.html#" target="_blank"></i>BANDO HUNTER<i class="fas fa-map-marked-alt"></i></a>
+      <a class="nav-item nav-link" href="../../Demo-CSUN/page1/index.html">TURBOTASTIC<i class="fas fa-car-crash"></i></a>
+      <a class="nav-item nav-link" href="../../Demo-CSUN/page2/index.html"> ME & THE HOMIES<i class="fas fa-users"></i></a>
+     <a class="nav-item nav-link" href="../../Demo-CSUN/page3/index.html#"> BANDO HUNTER<i class="fas fa-map-marked-alt"></i></a>
     </div>
   </div>
 </nav>
