--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <!-- bootstrap navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-  <a href="index.html#" class="navbar-brand"><i class="far fa-grin-squint-tears"></i>TROLLMOTION</a>
+  <a href="index.html#" class="navbar-brand"><i class="far fa-grin-squint-tears">TROLLMOTION</i></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
