--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 		<div class="my-2 px-2 w-full overflow-hidden md:w-1/3">
 			<article class="border border-black bg-black">
 				<a href="part1.html">
-				    	<img alt="Chinatown" class="block h-auto w-full" 
+				    	<img alt="#" class="block h-auto w-full" 
 				    	src="http://i50.photobucket.com/albums/f323/alchemist257/IMG_7428_zpssydwjbeq.jpg">
 				</a>
 				<header header class="lg:flex lg:items-center justify-between my-2 p-2">
@@ -161,26 +161,11 @@
 
 	</div>
 
-	<div class="flex items-center justify-between mb-4 md:mb-0">
-    <h1 class="leading-none text-2xl text-grey-darkest">
-      <a class="no-underline text-red hover:text-pink font-title" href="index.html">
-       <i class="far fa-grin-squint-tears"></i>TrollMotion<i class="fas fa-car-crash"></i>
-      </a>
-    </h1>
-  </div>
-  <!-- END Logo text or image -->
-  
-  <!-- Global navigation -->
-  <nav>
-    <ul class="list-reset flex items-center">
-      <li>
-        <a class="block no-underline py-2 text-red text-right hover:text-pink font-title md:p-0 font-bold" href="index.html">
-          HOME<i class="fas fa-bomb"></i>
-        </a>
-      </li>
-    </ul>
-  </nav>
+<footer class="font-Notable">
 
+ <small>
+  &copy; TrollMotionPhotography</small>
+</footer>
 
 
 
