--- a/part1.html
+++ b/part1.html
@@ -145,7 +145,7 @@
                 <header class="flex items-center justify-between leading-tight p-2 md:p-4">
                     <h1 class="text-lg">
                         <a class="no-underline hover:text-orange text-white font-locations" href="part2.html">
-                            Views From The Bando<i class="fas fa-city"></i>
+                            Views From The Bando
                         </a>
                     </h1>
                     <p class="text-grey text-sm">
@@ -196,6 +196,8 @@
 </div>
 </h2>
 
-	
+	 <small>
+  &copy; TrollMotionPhotography</small>
+</footer>
 </body>
 </html>
